Add table (beta)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <header>Game Result</header>
       <div class="content">
         <div id="output-modal"></div>
+        <div id="modal-tabel"></div>
       </div>
     </div>
   </div>
