--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <header>Game Result</header>
       <div class="content">
         <div id="output-modal"></div>
-        <div id="modal-tabel"></div>
+        <table id="modal-tabel"></table>
       </div>
     </div>
   </div>
